# telecom-egypt-rag

./: .dockerignore  .gitattributes  .gitignore  Dockerfile  README.md  assessment.md  debug_misrlex.py  debug_misrlex_gen.py  pyproject.toml  requirements.txt  samples_10.json  test_conservative.py  test_qdrant.py  test_similarity.py  test_sort.py  test_validation.py
app/: streamlit_app.py
config/: .env.example  kb_sources.yaml  settings.py
data/evaluation/: generation_eval_results_v1.csv  golden_queries_v1.jsonl  retrieval_eval_comparison_v1.csv  retrieval_eval_results_v1.csv
docker/: docker-compose.yml  prometheus.yml
docs/: cloud_embedding_workflow.md  colab_full_pipeline.md  git_workflow.md  known_issues.md  scraping_corporate_sustainability_and_about_te.md  scraping_we_business.md  scraping_we_mobile.md  telecom_egypt_rag_presentation.pptx
notebooks/: eval_notebook.ipynb  retrieval_experiment_colab.ipynb  telecom_rag_colab_full_pipeline.ipynb
scripts/: build_bm25_index.py  build_chunks.py  build_qdrant_index.py  build_unified_kb.py  clean_mobile_post_processed.py  cloud_build_artifacts.py  colab_full_pipeline.py  package_lightning_upload.py  pull_ollama_models.sh  qa_processed_sources.py  reset_indexes.py  restore_cloud_artifacts.py  run_generation_eval.py  run_retrieval_eval.py  scrape_section_scrapling.py  scrape_we_business_scrapling.py  scrape_we_mobile_scrapling.py  scrape_we_public_site.py  test_generation.py  test_retrieval.py  test_upload_ingestion.py  test_uploaded_retrieval.py
src/: __init__.py
src/colab_pipeline/: __init__.py
(+148 files in other folders)
